--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@playwright/test": "^1.49.1",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/adapter-node": "^2.0.0",
+		"@sveltejs/adapter-vercel": "^5.7.2",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"prettier": "^3.4.2",
@@ -35,5 +36,15 @@
 		"dotenv": "^16.5.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.16.0"
+	},
+	"optionalDependencies": {
+		"@aws-sdk/credential-providers": "^3.830.0",
+		"@mongodb-js/zstd": "^2.0.1",
+		"aws4": "^1.13.2",
+		"gcp-metadata": "^5.3.0",
+		"kerberos": "^2.2.2",
+		"mongodb-client-encryption": "^6.4.0",
+		"snappy": "^7.2.2",
+		"socks": "^2.8.5"
 	}
 }
