--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"dev:kit": "vite dev",
 		"dev:server": "node server.js",
 		"build": "vite build",
-		"start": "node build",
+		"start": "node server.js",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
