--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"dev": "concurrently \"npm run dev:kit\" \"npm run dev:server\"",
 		"dev:kit": "vite dev",
 		"dev:server": "node server.js",
-		"build": "vite build",
-		"start": "node server.js",
+		"build": "vite build && node build-server.js",
+		"start": "node build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
