--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "concurrently \"npm run dev:kit\" \"npm run dev:server\"",
 		"dev:kit": "vite dev",
 		"dev:server": "node server.js",
-		"build": "vite build && node build-server.js",
+		"build": "vite build && node server.js",
 		"start": "node build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
