--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "concurrently \"npm run dev:kit\" \"npm run dev:server\"",
+		"dev": "concurrently \"vite dev\" \"node server.js\"",
 		"dev:kit": "vite dev",
 		"dev:server": "node server.js",
 		"build": "vite build && node server.js",
-		"start": "node build",
+		"start": "node server.js",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
