--- a/package.json
+++ b/package.json
@@ -32,14 +32,18 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"agenda": "^5.0.0",
 		"bcryptjs": "^3.0.2",
 		"bootstrap": "^5.3.7",
+		"bullmq": "^5.55.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
 		"express-session": "^1.18.1",
+		"ioredis": "^5.6.1",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.16.0",
+		"node-cron": "^4.1.1",
 		"twitter-api-v2": "^1.23.2"
 	},
 	"optionalDependencies": {
