--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"build": "vite build",
 		"start": "node build",
 		"preview": "vite preview",
+		"worker": "node scripts/worker.js",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -33,9 +34,10 @@
 	},
 	"dependencies": {
 		"agenda": "^5.0.0",
+		"axios": "^1.10.0",
 		"bcryptjs": "^3.0.2",
 		"bootstrap": "^5.3.7",
-		"bullmq": "^5.55.0",
+		"bullmq": "^5.56.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
