--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,12 @@ Thumbs.db
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 package-copy.json
-static/uploads/1750562521921-69y8j10yyou.png
 *.png
 *.webp
+
+# Ignore everything in static/
+static/*
+
+# Except the uploads folder and its contents
+!static/uploads/
+!static/uploads/**
