--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,11 @@ package-copy.json
 *.png
 *.webp
 
-static/uploads/
+# ignore ทุกไฟล์ใน uploads
+static/uploads/*
+
+# ไม่ ignore ไฟล์ .png ใน uploads
+!static/uploads/*.png
 
 # ✅ ยกเลิก ignore ของ static (เพื่อ track ไฟล์อื่นใน static/)
 !static/
