--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.53.0",
 		"agenda": "^5.0.0",
 		"axios": "^1.10.0",
 		"bcryptjs": "^3.0.2",
